2005-07-28  Carl Worth  <cworth@cworth.org>

	* test/Makefile.am (EXTRA_DIST): Remove
	text-antialias-subpixel-ref.png from the list since it doesn't
	exist yet.

2005-07-28  Carl Worth  <cworth@cworth.org>

	* doc/public/tmpl/cairo.sgml: More doc/public/tmpl churn.

2005-07-28  Carl Worth  <cworth@cworth.org>
	
	* test/Makefile.am (EXTRA_DIST): Add
	text-antialias-{gray|none|subpixel}-ref.png so they get
	distributed.

2005-07-28  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* test/cairo-test.c (cairo_test_create_surface_from_png): Use
	cairo_surface_status(image) instead of testing for NULL from
	cairo_image_surface_create_from_png to enable testing when srcdir
	!= builddir again.
	
2005-07-28  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Note that consistent error handling is done now.

2005-07-28  Carl Worth  <cworth@cworth.org>

	* src/cairo-image-surface.c: (cairo_image_surface_get_width),
	(cairo_image_surface_get_height): Fix to call _cairo_error and
	return 0 on surface-type mismatch.

2005-07-28  Owen Taylor  <otaylor@redhat.com>

	* configure.in Makefile.am: Skip tests/ directory if
	libpng was disabled. (#3423, reported by Steve Chaplin)

2005-07-28  Carl Worth  <cworth@cworth.org>

	* src/cairo-png.c: (read_png),
	(cairo_image_surface_create_from_png): Fix so that one of three
	different error status values will be returned:

		CAIRO_STATUS_NO_MEMORY
		CAIRO_STATUS_FILE_NOT_FOUND
		CAIRO_STATUS_READ_ERROR

	* src/cairo.h:
	* src/cairo.c: (cairo_status_to_string): Add new
	CAIRO_STATUS_FILE_NOT_FOUND.

	* src/cairoint.h:
	* src/cairo-surface.c: Add new _cairo_surface_nil_read_error and
	_cairo_surface_nil_file_not_found.

	* test/create-from-png.c: (draw): Test the new FILE_NOT_FOUND
	error.

2005-07-28  Stuart Parmenter  <pavlov@pavlov.net>

	* src/cairo-win32-font.c
	* src/cairo-win32-surface.c
	Use surface->base.status instead of just surface on
	cairo_win32_surface_t *s

2005-07-28  Owen Taylor  <otaylor@redhat.com>
